[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Fonts/NormalTextGreen.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Images/reddot.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Whiskers.png" type="Texture" id=3]
[ext_resource path="res://Robot/ControlPanelElements/WhiskerPanel.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_15.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_13.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_10.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_11.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_4.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_7.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_2.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_5.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_12.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_14.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_8.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_9.png" type="Texture" id=19]
[ext_resource path="res://Assets/Images/whisker_reveal_overlay/reveal_sweep_0.png" type="Texture" id=20]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 18.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 5 ) ],
"loop": true,
"name": "reveal",
"speed": 5.0
} ]

[node name="WhiskerPanel" type="Control"]
anchor_right = 0.625
anchor_bottom = 0.533
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 2.11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="AspectRatioContainer"]
margin_left = 3.05176e-05
margin_top = 8.24123
margin_right = 640.0
margin_bottom = 311.559
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="TextureRect" parent="AspectRatioContainer/Panel"]
anchor_left = 0.022
anchor_top = 0.2
anchor_right = 0.883
anchor_bottom = 0.81
margin_left = 348.595
margin_top = 17.8179
margin_right = -8.44531
margin_bottom = -1.20581
rect_scale = Vector2( 0.954025, 0.939277 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="AspectRatioContainer/Panel/Display"]
position = Vector2( 82.5, 104.5 )
scale = Vector2( 0.258, 0.258 )
frames = SubResource( 2 )
animation = "reveal"

[node name="Label" type="Label" parent="AspectRatioContainer/Panel"]
margin_left = 34.4611
margin_top = 120.614
margin_right = 74.4611
margin_bottom = 134.614
rect_scale = Vector2( 6.18873, 6.54283 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="TextureRect" parent="AspectRatioContainer/Panel/MarginContainer"]
margin_right = 640.0
margin_bottom = 303.0
rect_pivot_offset = Vector2( 56.6479, 41.4209 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red1" type="TextureRect" parent="AspectRatioContainer/Panel"]
anchor_left = 0.037
anchor_top = 0.072
anchor_right = 0.076
anchor_bottom = 0.156
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red2" type="TextureRect" parent="AspectRatioContainer/Panel"]
anchor_left = 0.081
anchor_top = 0.072
anchor_right = 0.12
anchor_bottom = 0.156
rect_pivot_offset = Vector2( 39.8589, -1.83167 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red3" type="TextureRect" parent="AspectRatioContainer/Panel"]
anchor_left = 0.123
anchor_top = 0.071
anchor_right = 0.162
anchor_bottom = 0.156
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red4" type="TextureRect" parent="AspectRatioContainer/Panel"]
anchor_left = 0.296
anchor_top = 0.071
anchor_right = 0.336
anchor_bottom = 0.156
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red5" type="TextureRect" parent="AspectRatioContainer/Panel"]
anchor_left = 0.339
anchor_top = 0.072
anchor_right = 0.377
anchor_bottom = 0.156
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red6" type="TextureRect" parent="AspectRatioContainer/Panel"]
anchor_left = 0.38
anchor_top = 0.075
anchor_right = 0.419
anchor_bottom = 0.156
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="AspectRatioContainer/Panel"]
anchor_left = 0.024
anchor_top = 0.232
anchor_right = 0.28
anchor_bottom = 0.307
margin_left = 10.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.0666667, 0.811765, 0.278431, 1 )
text = "Whisker"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AspectRatioContainer/Panel/Display/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
